# nebius-llm-architectures-module-2

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/architecture/: 01-cifar10-classification.md  01-module-overview.md  02-optimization-workflows.md  02-rnn-language-modeling.md  03-forward-pass-framework.md  03-text-classification-pipeline.md  04-backward-pass-framework.md  04-experimentation-and-evaluation.md  05-notebook-presentation-layer.md  06-cifar10-submission-flow.md  07-rnn-lm-submission-flow.md  08-forward-pass-submission-flow.md  09-backward-pass-submission-flow.md
src/: HW2_Gradient_descent_&_Pytorch.ipynb  HW4_bon_p1_backward_sub.ipynb  HW4_bon_p2_forward_orig.ipynb  HW4_bon_p2_forward_sub.ipynb  HW4_p1_CIFAR10_orig.ipynb  HW4_p1_CIFAR10_sub.ipynb  HW4_p1_task_1_4_exp.ipynb  HW4_p1_task_1_5_cat_dog_exp.ipynb  HW4_p1_task_3_exp.ipynb  HW4_p2_RNN_LM_orig.ipynb  HW4_p2_RNN_LM_sub.ipynb  HW_1_sub.ipynb  LLM_Architectures,_hometask_1.ipynb  LLM_Architectures,_week_2_Gradient_descent_&_Pytorch.ipynb  LLM_Architectures_W4_homework_bonus_p1_backward_original.ipynb  LLM_Architectures_W4_homework_bonus_p1_backward_submission.ipynb  LLM_Architectures_W4_p1_homework_CIFAR10_submission.ipynb  LLM_Architectures_hometask_1_original.ipynb  LLM_Architectures_hometask_1_submission.ipynb  Untitled.ipynb  Week_6_practice_session.ipynb  basics-test.ipynb  hw1_optimization_pytorch_polished.ipynb  notebook_theme.css  pytorch_optimization_report.ipynb
src/hw1/: HW_1_sub.ipynb
src/hw2/: HW2_Gradient_descent_&_Pytorch.ipynb  (+2 more)
tests/: test_workspace.py
(+8 files in other folders)
